Fix misaligned popover preview on right align

--- a/client/blocks/feedback/edit.scss
+++ b/client/blocks/feedback/edit.scss
@@ -41,7 +41,7 @@
 		align-items: flex-start;
 	}
 
-	.crowdsignal-forms-feedback.align-right {
+	.crowdsignal-forms-feedback.align-right & {
 		align-items: flex-end;
 	}
 }
